objects/Contract_Tier_Range__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Tier_Set__c</fullName>
        <label>Contract Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipLabel>Contract Tier Ranges</relationshipLabel>
        <relationshipName>Contract_Tier_Ranges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Tier Range</label>
    <nameField>
        <displayFormat>CTR-{000000}</displayFormat>
        <label>Contract Tier Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Tier Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>